update type tokens from text to alt

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1035,7 +1035,7 @@
             },
             "type": "typography"
           },
-          "text": {
+          "alt": {
             "value": {
               "fontFamily": "{app.fontFamily.control.text}",
               "fontWeight": "{app.fontWeight.control.text.alt}",
@@ -1064,7 +1064,7 @@
             },
             "type": "typography"
           },
-          "text": {
+          "alt": {
             "value": {
               "fontFamily": "{app.fontFamily.control.symbol}",
               "fontWeight": "{app.fontWeight.control.symbol.alt}",
