font-weight change 'text' to 'book' and 'heavy' to 'black'

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1824,7 +1824,7 @@
                 "default": {
                   "value": {
                     "fontFamily": "{app.fontFamily.surface.body.symbol}",
-                    "fontWeight": "{config.fontWeight.text}",
+                    "fontWeight": "{config.fontWeight.book}",
                     "lineHeight": "140%",
                     "fontSize": "{app.fontSize.surface.body.symbol.sm}"
                   },
@@ -2702,7 +2702,7 @@
             "type": "fontWeights"
           },
           "alt": {
-            "value": "{config.fontWeight.text}",
+            "value": "{config.fontWeight.book}",
             "type": "fontWeights"
           },
           "strong": {
@@ -2716,7 +2716,7 @@
             "type": "fontWeights"
           },
           "alt": {
-            "value": "{config.fontWeight.text}",
+            "value": "{config.fontWeight.book}",
             "type": "fontWeights"
           },
           "strong": {
@@ -2879,7 +2879,7 @@
         "body": {
           "text": {
             "default": {
-              "value": "{config.fontWeight.text}",
+              "value": "{config.fontWeight.book}",
               "type": "fontWeights"
             },
             "strong": {
@@ -2889,7 +2889,7 @@
           },
           "symbol": {
             "default": {
-              "value": "{config.fontWeight.text}",
+              "value": "{config.fontWeight.book}",
               "type": "fontWeights"
             },
             "strong": {
@@ -2901,7 +2901,7 @@
         "caption": {
           "text": {
             "default": {
-              "value": "{config.fontWeight.text}",
+              "value": "{config.fontWeight.book}",
               "type": "fontWeights"
             },
             "strong": {
@@ -2911,7 +2911,7 @@
           },
           "symbol": {
             "default": {
-              "value": "{config.fontWeight.text}",
+              "value": "{config.fontWeight.book}",
               "type": "fontWeights"
             },
             "strong": {
@@ -2933,7 +2933,7 @@
           },
           "symbol": {
             "default": {
-              "value": "{config.fontWeight.text}",
+              "value": "{config.fontWeight.book}",
               "type": "fontWeights"
             },
             "strong": {
@@ -2945,7 +2945,7 @@
         "code": {
           "text": {
             "default": {
-              "value": "{config.fontWeight.text}",
+              "value": "{config.fontWeight.book}",
               "type": "fontWeights"
             },
             "strong": {
