--- a/tokens/config.json
+++ b/tokens/config.json
@@ -39,8 +39,8 @@
         "value": "Regular",
         "type": "fontWeights"
       },
-      "text": {
-        "value": "Text",
+      "book": {
+        "value": "Book",
         "type": "fontWeights"
       },
       "medium": {
@@ -55,8 +55,8 @@
         "value": "Bold",
         "type": "fontWeights"
       },
-      "heavy": {
-        "value": "Heavy",
+      "black": {
+        "value": "Black",
         "type": "fontWeights"
       }
     },
