reconfigure type tokens

--- a/tokens/config.json
+++ b/tokens/config.json
@@ -2,23 +2,23 @@
   "config": {
     "fontFamily": {
       "primary": {
-        "value": "Mirage",
+        "value": "Interface",
         "type": "fontFamilies"
       },
       "secondary": {
-        "value": "Index",
+        "value": "Interface",
         "type": "fontFamilies"
       },
       "tertiary": {
-        "value": "Mirage",
+        "value": "Interface",
         "type": "fontFamilies"
       },
       "ui": {
-        "value": "Mirage",
+        "value": "Interface",
         "type": "fontFamilies"
       },
       "uiAlt": {
-        "value": "Index",
+        "value": "Interface",
         "type": "fontFamilies"
       },
       "code": {
@@ -40,7 +40,7 @@
         "type": "fontWeights"
       },
       "book": {
-        "value": "Book",
+        "value": "Text",
         "type": "fontWeights"
       },
       "medium": {
