update button and app label / control

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -82,15 +82,15 @@
         },
         "radius": {
           "xxs": {
-            "value": "{app.dimension.control.radius.xs} - 0.125rem",
+            "value": "{app.dimension.control.radius.xs}",
             "type": "dimension"
           },
           "xs": {
-            "value": "{app.dimension.control.radius.sm} - 0.125rem",
+            "value": "{app.dimension.control.radius.sm}",
             "type": "dimension"
           },
           "sm": {
-            "value": "{app.dimension.control.radius.md} - 0.125rem",
+            "value": "{app.dimension.control.radius.md}",
             "type": "dimension"
           },
           "md": {
@@ -98,11 +98,11 @@
             "type": "dimension"
           },
           "lg": {
-            "value": "{app.dimension.control.radius.md} + 0.125rem",
+            "value": "{app.dimension.control.radius.md}",
             "type": "dimension"
           },
           "xl": {
-            "value": "{app.dimension.control.radius.lg} + 0.125rem",
+            "value": "{app.dimension.control.radius.lg}",
             "type": "dimension"
           }
         },
@@ -228,11 +228,11 @@
         },
         "radius": {
           "xs": {
-            "value": "{app.dimension.label.radius.sm} - 0.125rem",
+            "value": "{app.dimension.label.radius.sm}",
             "type": "dimension"
           },
           "sm": {
-            "value": "{app.dimension.label.radius.md} - 0.125rem",
+            "value": "{app.dimension.label.radius.md}",
             "type": "dimension"
           },
           "md": {
@@ -240,11 +240,11 @@
             "type": "dimension"
           },
           "lg": {
-            "value": "{app.dimension.label.radius.md} + 0.125rem",
+            "value": "{app.dimension.label.radius.md}",
             "type": "dimension"
           },
           "xl": {
-            "value": "{app.dimension.label.radius.lg} + 0.125rem",
+            "value": "{app.dimension.label.radius.lg}",
             "type": "dimension"
           }
         },
