update type tokens

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -2116,11 +2116,11 @@
               "type": "fontSizes"
             },
             "md": {
-              "value": "{app.fontSize.surface.display.text.sm} + 2rem",
+              "value": "{app.fontSize.surface.display.text.sm} + 2.75rem",
               "type": "fontSizes"
             },
             "lg": {
-              "value": "{app.fontSize.surface.display.text.md} + 2rem",
+              "value": "{app.fontSize.surface.display.text.md} + 2.75rem",
               "type": "fontSizes"
             }
           },
@@ -2130,11 +2130,11 @@
               "type": "fontSizes"
             },
             "md": {
-              "value": "{app.fontSize.surface.display.symbol.sm} + 2rem",
+              "value": "{app.fontSize.surface.display.symbol.sm} + 2.75rem",
               "type": "fontSizes"
             },
             "lg": {
-              "value": "{app.fontSize.surface.display.symbol.md} + 2rem",
+              "value": "{app.fontSize.surface.display.symbol.md} + 2.75rem",
               "type": "fontSizes"
             }
           }
@@ -2795,7 +2795,7 @@
               "type": "fontWeights"
             },
             "strong": {
-              "value": "{config.fontWeight.bold}",
+              "value": "{config.fontWeight.semibold}",
               "type": "fontWeights"
             }
           },
@@ -2805,7 +2805,7 @@
               "type": "fontWeights"
             },
             "strong": {
-              "value": "{config.fontWeight.bold}",
+              "value": "{config.fontWeight.semibold}",
               "type": "fontWeights"
             }
           }
@@ -2817,7 +2817,7 @@
               "type": "fontWeights"
             },
             "strong": {
-              "value": "{config.fontWeight.bold}",
+              "value": "{config.fontWeight.semibold}",
               "type": "fontWeights"
             }
           },
@@ -2827,7 +2827,7 @@
               "type": "fontWeights"
             },
             "strong": {
-              "value": "{config.fontWeight.bold}",
+              "value": "{config.fontWeight.semibold}",
               "type": "fontWeights"
             }
           }
@@ -2915,7 +2915,7 @@
               "type": "fontWeights"
             },
             "strong": {
-              "value": "{config.fontWeight.semibold}",
+              "value": "{config.fontWeight.medium}",
               "type": "fontWeights"
             }
           }
@@ -2997,29 +2997,29 @@
         "display": {
           "text": {
             "sm": {
-              "value": "95%",
+              "value": "110%",
               "type": "lineHeights"
             },
             "md": {
-              "value": "90%",
+              "value": "105%",
               "type": "lineHeights"
             },
             "lg": {
-              "value": "85%",
+              "value": "100%",
               "type": "lineHeights"
             }
           },
           "symbol": {
             "sm": {
-              "value": "95%",
+              "value": "110%",
               "type": "lineHeights"
             },
             "md": {
-              "value": "90%",
+              "value": "105%",
               "type": "lineHeights"
             },
             "lg": {
-              "value": "85%",
+              "value": "100%",
               "type": "lineHeights"
             }
           }
