--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1219,7 +1219,7 @@
                 },
                 "type": "typography"
               },
-              "default-mobile": {
+              "mobile": {
                 "value": {
                   "fontFamily": "{app.fontFamily.surface.display.text}",
                   "fontWeight": "{app.fontWeight.surface.display.text.default}",
