fixed title tokens

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1227,6 +1227,24 @@
                   "fontSize": "{app.fontSize.surface.display.text.sm}"
                 },
                 "type": "typography"
+              },
+              "mobile": {
+                "value": {
+                  "fontFamily": "{app.fontFamily.surface.display.text}",
+                  "fontWeight": "{app.fontWeight.surface.display.text.default}",
+                  "lineHeight": "{app.lineHeight.surface.display.text.sm}",
+                  "fontSize": "{app.fontSize.surface.display.text.sm} - 1.25rem"
+                },
+                "type": "typography"
+              },
+              "strong-mobile": {
+                "value": {
+                  "fontFamily": "{app.fontFamily.surface.display.text}",
+                  "fontWeight": "{app.fontWeight.surface.display.text.strong}",
+                  "lineHeight": "{app.lineHeight.surface.display.text.sm}",
+                  "fontSize": "{app.fontSize.surface.display.text.sm} - 1.25rem"
+                },
+                "type": "typography"
               }
             },
             "md": {
@@ -1247,6 +1265,24 @@
                   "fontSize": "{app.fontSize.surface.display.text.md}"
                 },
                 "type": "typography"
+              },
+              "mobile": {
+                "value": {
+                  "fontFamily": "{app.fontFamily.surface.display.text}",
+                  "fontWeight": "{app.fontWeight.surface.display.text.default}",
+                  "lineHeight": "{app.lineHeight.surface.display.text.md}",
+                  "fontSize": "{app.fontSize.surface.display.text.md} - 1.875rem"
+                },
+                "type": "typography"
+              },
+              "strong-mobile": {
+                "value": {
+                  "fontFamily": "{app.fontFamily.surface.display.text}",
+                  "fontWeight": "{app.fontWeight.surface.display.text.strong}",
+                  "lineHeight": "{app.lineHeight.surface.display.text.md}",
+                  "fontSize": "{app.fontSize.surface.display.text.md} - 1.875rem"
+                },
+                "type": "typography"
               }
             },
             "lg": {
@@ -1264,6 +1300,24 @@
                   "fontFamily": "{app.fontFamily.surface.display.text}",
                   "fontWeight": "{app.fontWeight.surface.display.text.strong}",
                   "fontSize": "{app.fontSize.surface.display.text.lg}",
+                  "lineHeight": "{app.lineHeight.surface.display.text.lg}"
+                },
+                "type": "typography"
+              },
+              "mobile": {
+                "value": {
+                  "fontFamily": "{app.fontFamily.surface.display.text}",
+                  "fontWeight": "{app.fontWeight.surface.display.text.default}",
+                  "fontSize": "{app.fontSize.surface.display.text.lg} - 3rem",
+                  "lineHeight": "{app.lineHeight.surface.display.text.lg}"
+                },
+                "type": "typography"
+              },
+              "strong-mobile": {
+                "value": {
+                  "fontFamily": "{app.fontFamily.surface.display.text}",
+                  "fontWeight": "{app.fontWeight.surface.display.text.strong}",
+                  "fontSize": "{app.fontSize.surface.display.text.lg} - 3rem",
                   "lineHeight": "{app.lineHeight.surface.display.text.lg}"
                 },
                 "type": "typography"
