update title line height

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1232,7 +1232,7 @@
                 "value": {
                   "fontFamily": "{app.fontFamily.surface.display.text}",
                   "fontWeight": "{app.fontWeight.surface.display.text.default}",
-                  "lineHeight": "{app.lineHeight.surface.display.text.sm}",
+                  "lineHeight": "{app.lineHeight.surface.display.text.sm} + 20%",
                   "fontSize": "{app.fontSize.surface.display.text.sm} - 1.25rem"
                 },
                 "type": "typography"
@@ -1241,7 +1241,7 @@
                 "value": {
                   "fontFamily": "{app.fontFamily.surface.display.text}",
                   "fontWeight": "{app.fontWeight.surface.display.text.strong}",
-                  "lineHeight": "{app.lineHeight.surface.display.text.sm}",
+                  "lineHeight": "{app.lineHeight.surface.display.text.sm} + 20%",
                   "fontSize": "{app.fontSize.surface.display.text.sm} - 1.25rem"
                 },
                 "type": "typography"
@@ -1270,7 +1270,7 @@
                 "value": {
                   "fontFamily": "{app.fontFamily.surface.display.text}",
                   "fontWeight": "{app.fontWeight.surface.display.text.default}",
-                  "lineHeight": "{app.lineHeight.surface.display.text.md}",
+                  "lineHeight": "{app.lineHeight.surface.display.text.md} + 20%",
                   "fontSize": "{app.fontSize.surface.display.text.md} - 1.875rem"
                 },
                 "type": "typography"
@@ -1279,7 +1279,7 @@
                 "value": {
                   "fontFamily": "{app.fontFamily.surface.display.text}",
                   "fontWeight": "{app.fontWeight.surface.display.text.strong}",
-                  "lineHeight": "{app.lineHeight.surface.display.text.md}",
+                  "lineHeight": "{app.lineHeight.surface.display.text.md} + 20%",
                   "fontSize": "{app.fontSize.surface.display.text.md} - 1.875rem"
                 },
                 "type": "typography"
@@ -1309,7 +1309,7 @@
                   "fontFamily": "{app.fontFamily.surface.display.text}",
                   "fontWeight": "{app.fontWeight.surface.display.text.default}",
                   "fontSize": "{app.fontSize.surface.display.text.lg} - 3rem",
-                  "lineHeight": "{app.lineHeight.surface.display.text.lg}"
+                  "lineHeight": "{app.lineHeight.surface.display.text.lg} + 20%"
                 },
                 "type": "typography"
               },
@@ -1318,7 +1318,7 @@
                   "fontFamily": "{app.fontFamily.surface.display.text}",
                   "fontWeight": "{app.fontWeight.surface.display.text.strong}",
                   "fontSize": "{app.fontSize.surface.display.text.lg} - 3rem",
-                  "lineHeight": "{app.lineHeight.surface.display.text.lg}"
+                  "lineHeight": "{app.lineHeight.surface.display.text.lg} + 20%"
                 },
                 "type": "typography"
               }
